--- a/oak-parent/pom.xml
+++ b/oak-parent/pom.xml
@@ -30,7 +30,7 @@
   <groupId>org.apache.jackrabbit</groupId>
   <artifactId>oak-parent</artifactId>
   <name>Oak Parent POM</name>
-  <version>1.8-SNAPSHOT</version>
+  <version>1.6-R1793526</version>
   <packaging>pom</packaging>
 
   <properties>
