--- a/oak-segment-tar/pom.xml
+++ b/oak-segment-tar/pom.xml
@@ -34,6 +34,7 @@
 
     <properties>
         <netty.version>4.1.14.Final</netty.version>
+        <concurrentlinkedhashmap.version>1.4.2</concurrentlinkedhashmap.version>
     </properties>
 
     <build>
@@ -45,7 +46,8 @@
                     <instructions>
                         <Export-Package />
                         <Embed-Dependency>
-                            netty-*
+                            netty-*,
+                            concurrentlinkedhashmap-lru
                         </Embed-Dependency>
                         <Import-Package>
                             com.codahale.metrics*;version="[3.1,4)",
@@ -237,11 +239,6 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
-            <artifactId>concurrentlinkedhashmap-lru</artifactId>
-            <scope>provided</scope>
-	    </dependency>
-        <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
             <scope>provided</scope>
@@ -262,6 +259,8 @@
             <scope>provided</scope>
         </dependency>
 
+		<!-- Embedded dependencies -->
+		
         <!-- Netty -->
 
         <dependency>
@@ -301,6 +300,15 @@
             <scope>compile</scope>
         </dependency>
 
+		<!-- ConcurrentLinkedHashMap -->
+
+        <dependency>
+            <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
+            <artifactId>concurrentlinkedhashmap-lru</artifactId>
+            <version>${concurrentlinkedhashmap.version}</version>
+            <scope>compile</scope>
+	    </dependency>
+	    
         <!-- Dependencies on Oak testing modules -->
 
         <dependency>
