OAK-7332 - Benchmarks failure on Oak-Segment-* fixtures due to concurrentlinkedhashmap version conflict
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/oak/trunk@1826624 13f79535-47bb-0310-9956-ffa450edef68

--- a/oak-benchmarks/pom.xml
+++ b/oak-benchmarks/pom.xml
@@ -180,6 +180,10 @@
                     <groupId>org.apache.hadoop</groupId>
                     <artifactId>hadoop-annotations</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
+                    <artifactId>concurrentlinkedhashmap-lru</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
