OAK-7335: oak-upgrade long name filter should consider the path length
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/oak/trunk@1826630 13f79535-47bb-0310-9956-ffa450edef68

--- a/oak-parent/pom.xml
+++ b/oak-parent/pom.xml
@@ -208,6 +208,7 @@
                   <filter>!org.apache.jackrabbit.oak.plugins.index.reference</filter>
                   <filter>!org.apache.jackrabbit.oak.plugins.lock</filter>
                   <filter>!org.apache.jackrabbit.oak.plugins.memory</filter>
+                  <filter>!org.apache.jackrabbit.oak.plugins.migration</filter>
                   <filter>!org.apache.jackrabbit.oak.plugins.name</filter>
                   <filter>!org.apache.jackrabbit.oak.plugins.nodetype</filter>
                   <filter>!org.apache.jackrabbit.oak.plugins.nodetype.write</filter>
