OAK-7355: Move the pluggable storage interfaces to the SPI package
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/oak/trunk@1827291 13f79535-47bb-0310-9956-ffa450edef68

--- a/oak-parent/pom.xml
+++ b/oak-parent/pom.xml
@@ -233,6 +233,8 @@
                   <filter>!org.apache.jackrabbit.oak.plugins.index.solr.query</filter>
                   <filter>!org.apache.jackrabbit.oak.plugins.index.solr.server</filter>
                   <filter>!org.apache.jackrabbit.oak.plugins.index.solr.util</filter>
+                  <filter>!org.apache.jackrabbit.oak.segment.spi.monitor</filter>
+                  <filter>!org.apache.jackrabbit.oak.segment.spi.persistence</filter>
                   <filter>*</filter>
                 </filters>
               </configuration>
