--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
     <module>oak-examples</module>
     <module>oak-it</module>
     <module>oak-segment-tar</module>
+    <module>oak-segment-azure</module>
     <module>oak-benchmarks</module>
   </modules>
 
