OAK-7355 Move the pluggable storage interfaces to the SPI package
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/oak/trunk@1827395 13f79535-47bb-0310-9956-ffa450edef68

--- a/oak-segment-azure/pom.xml
+++ b/oak-segment-azure/pom.xml
@@ -63,6 +63,15 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.rat</groupId>
+                <artifactId>apache-rat-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>start-azurite.sh</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
