--- a/oak-store-document/pom.xml
+++ b/oak-store-document/pom.xml
@@ -39,7 +39,7 @@
         <configuration>
           <instructions>
             <Import-Package>
-              com.mongodb*;version="[3, 4)";resolution:=optional,
+              com.mongodb*;version="[3.6, 4)";resolution:=optional,
               *
             </Import-Package>
             <Export-Package>
@@ -309,7 +309,7 @@
     <dependency>
       <groupId>com.github.fakemongo</groupId>
       <artifactId>fongo</artifactId>
-      <version>2.0.6</version>
+      <version>2.2.0-RC1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
