OAK-7399: add build profile to build with latest supported Guava version
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/oak/trunk@1828827 13f79535-47bb-0310-9956-ffa450edef68

--- a/oak-parent/pom.xml
+++ b/oak-parent/pom.xml
@@ -878,6 +878,16 @@
       </build>
     </profile>
     <profile>
+      <id>guava-latest</id>
+      <dependencies>
+        <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>20.0</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
       <id>rdb-derby</id>
       <dependencies>
         <dependency>
