--- a/oak-parent/pom.xml
+++ b/oak-parent/pom.xml
@@ -58,6 +58,7 @@
     <h2.version>1.4.194</h2.version>
     <tika.version>1.17</tika.version>
     <guava.version>15.0</guava.version>
+    <guava.osgi.import>com.google.common.*;version="[15.0,21)"</guava.osgi.import>
     <findbugs.version>3.0.4</findbugs.version>
     <derby.version>10.14.1.0</derby.version>
     <java.version>1.8</java.version>
