OAK-7421: link Guava javadoc
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/oak/trunk@1829432 13f79535-47bb-0310-9956-ffa450edef68

--- a/oak-parent/pom.xml
+++ b/oak-parent/pom.xml
@@ -129,6 +129,7 @@
             <links>
               <link>https://docs.adobe.com/docs/en/spec/javax.jcr/javadocs/jcr-2.0/</link>
               <link>http://jackrabbit.apache.org/api/trunk/</link>
+              <link>https://google.github.io/guava/releases/${guava.version}/api/docs/</link>
             </links>
           </configuration>
         </plugin>
