--- a/oak-parent/pom.xml
+++ b/oak-parent/pom.xml
@@ -30,7 +30,7 @@
   <groupId>org.apache.jackrabbit</groupId>
   <artifactId>oak-parent</artifactId>
   <name>Oak Parent POM</name>
-  <version>1.10-SNAPSHOT</version>
+  <version>1.9.0</version>
   <packaging>pom</packaging>
 
   <properties>
@@ -1111,4 +1111,10 @@
       </build>
     </profile>
   </profiles>
+
+  <scm>
+    <connection>scm:svn:https://svn.apache.org/repos/asf/maven/pom/tags/jackrabbit-oak-1.9.0/oak-parent</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/maven/pom/tags/jackrabbit-oak-1.9.0/oak-parent</developerConnection>
+    <url>https://svn.apache.org/viewvc/maven/pom/tags/jackrabbit-oak-1.9.0/oak-parent</url>
+  </scm>
 </project>
