--- a/oak-segment-azure/pom.xml
+++ b/oak-segment-azure/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.jackrabbit</groupId>
         <artifactId>oak-parent</artifactId>
-        <version>1.10-SNAPSHOT</version>
+        <version>1.9.0</version>
         <relativePath>../oak-parent/pom.xml</relativePath>
     </parent>
 
@@ -43,7 +43,7 @@
                           <!-- OAK-7182 -->${guava.osgi.import},
                           *
                         </Import-Package>
-                        <Export-Package></Export-Package>
+                        <Export-Package />
                         <Embed-Dependency>
                             azure-storage,
                             azure-keyvault-core
