--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.apache.jackrabbit</groupId>
     <artifactId>oak-parent</artifactId>
-    <version>1.10-SNAPSHOT</version>
+    <version>1.9.0</version>
     <relativePath>oak-parent/pom.xml</relativePath>
   </parent>
 
@@ -76,9 +76,9 @@
   </modules>
 
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/jackrabbit/oak/trunk</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/jackrabbit/oak/trunk</developerConnection>
-    <url>http://svn.apache.org/viewvc/jackrabbit/oak/trunk</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/jackrabbit/oak/tags/jackrabbit-oak-1.9.0</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/jackrabbit/oak/tags/jackrabbit-oak-1.9.0</developerConnection>
+    <url>http://svn.apache.org/viewvc/jackrabbit/oak/tags/jackrabbit-oak-1.9.0</url>
   </scm>
 
   <build>
@@ -249,10 +249,12 @@ Apache Jackrabbit Oak ${project.version}. The release is available for download 
 
      http://jackrabbit.apache.org/downloads.html
 
-See the full release notes below for details about this release:&#10;&#10;
+See the full release notes below for details about this release:
+
+
                     </echo>
                     <concat destfile="${basedir}/target/announcement.txt" append="true">
-                      <filelist files="RELEASE-NOTES.txt"/>
+                      <filelist files="RELEASE-NOTES.txt" />
                     </concat>
                     <echo />
                     <echo>
