OAK-7438: Expose mongo.url as build property
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/oak/trunk@1829999 13f79535-47bb-0310-9956-ffa450edef68

--- a/oak-parent/pom.xml
+++ b/oak-parent/pom.xml
@@ -48,6 +48,7 @@
     <mongo.port>27017</mongo.port>
     <mongo.db>MongoMKDB</mongo.db>
     <mongo.db2>MongoMKDB2</mongo.db2>
+    <mongo.url/>
     <segment.db>SegmentMK</segment.db>
     <lucene.version>4.7.1</lucene.version>
     <solr.version>5.5.5</solr.version>
@@ -291,6 +292,7 @@
               <mongo.port>${mongo.port}</mongo.port>
               <mongo.db>${mongo.db}</mongo.db>
               <mongo.db2>${mongo.db2}</mongo.db2>
+              <mongo.url>${mongo.url}</mongo.url>
               <segment.db>${segment.db}</segment.db>
               <nsfixtures>${fixtures}</nsfixtures>
               <derby.stream.error.file>${project.build.directory}/derby.log</derby.stream.error.file>
@@ -309,6 +311,7 @@
               <mongo.port>${mongo.port}</mongo.port>
               <mongo.db>${mongo.db}</mongo.db>
               <mongo.db2>${mongo.db2}</mongo.db2>
+              <mongo.url>${mongo.url}</mongo.url>
               <nsfixtures>${fixtures}</nsfixtures>
               <derby.stream.error.file>${project.build.directory}/derby.log</derby.stream.error.file>
             </systemPropertyVariables>
