--- a/oak-upgrade/pom.xml
+++ b/oak-upgrade/pom.xml
@@ -97,6 +97,11 @@
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
+      <artifactId>oak-segment-azure</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.jackrabbit</groupId>
       <artifactId>oak-store-document</artifactId>
       <version>${project.version}</version>
     </dependency>
